src/test/ui/generator/dropck.stderr
error[E0597]: `*cell` does not live long enough
  --> $DIR/dropck.rs:10:40
   |
LL |     let ref_ = Box::leak(Box::new(Some(cell.borrow_mut())));
   |                                        ^^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | `*cell` dropped here while still borrowed
   | borrow might be used here, when `gen` is dropped and runs the destructor for generator
   |
   = note: values in a scope are dropped in the opposite order they are defined

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
